# qwen.rs

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: publish.yml  test.yml
assets/: config.json  generation_config.json
examples/: convert_ggml.rs  convert_ggml_int4.rs
src/: lib.rs  main.rs
src/qwen/: mod.rs  model.rs  quantized.rs  tiktoken.rs
