[package]
name = "qwen-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiktoken-rs = "0.5.4"
anyhow = "1.0.75"
base64 = "0.21.4"
candle-core = "0.2.2"
candle-datasets = "0.2.2"
candle-nn = "0.2.2"
candle-transformers = "0.2.2"
# candle-flash-attn = "0.2.2"

half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }

serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
tracing = "0.1.37"
